feat: admin CRUD completo, theme dark mode, designer BPMN, multi-tenancy funcional
- AdminController: CRUD de tenants, usuarios, roles, permisos
- Frontend: paginas admin con tabla inline editable, filtro activo/suspendido
- Theme: sistema light/dark con 30+ overrides MDC, pre-flash script, localStorage
- Designer: integracion bpmn-js con toolbar, propiedades, validacion XML
- Multi-tenancy: TenantIdentifierFilter + JwtAuthenticationFilter con TenantContext
- Docker: Dockerfiles multi-stage para backend (JRE 21) y frontend (nginx)
- Seguridad: JWT con tenantId en claims, ROLE_ADMIN para admin endpoints